run prettier, stylelint and eslint

--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -1,14 +1,14 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html lang="en-US">
-<head>
-    <meta charset="UTF-8">
-    <meta content="0; url=src/index.html" http-equiv="refresh">
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="0; url=src/index.html" http-equiv="refresh" />
     <script type="text/javascript">
-        window.location.href = "src/index.html"
+      window.location.href = "src/index.html";
     </script>
     <title>Page Redirection</title>
-</head>
-<body>
-La page a été déplacée vers <a href='src/index.html'>src/index.html</a>.
-</body>
+  </head>
+  <body>
+    La page a été déplacée vers <a href="src/index.html">src/index.html</a>.
+  </body>
 </html>
