add carton visibility, add blue and green carton, add carton finDeMatch

--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,10 @@
               <tr>
                 <th>Cartons</th>
                 <td>Points</td>
+                <td>Dispo en match</td>
+                <td>Dispo en mort subite</td>
+                <td>Dispo en prolongation</td>
+                <td>Fin du match</td>
                 <td>Carton Supérieur</td>
               </tr>
             </thead>
@@ -124,12 +128,12 @@
       </div>
       <br />
       Les sources sont disponibles
-      <a href="https://github.com/yannickbattail/sabre-laser-match">ici</a
+      <a href="https://github.com/yannickbattail/sabre-laser-match"> ici</a
       >.<br />
       Si vous avez des idées d'amélioration ou un bug, n'hésitez à créer un
       ticket
-      <a href="https://github.com/yannickbattail/sabre-laser-match/issues"
-        >ici</a
+      <a href="https://github.com/yannickbattail/sabre-laser-match/issues">
+        ici</a
       >.<br />
       <br />
       Les icônes viennent de
